# Portfolioprojekte

./: .gitignore  Download_kagglehub.py  EDA_bird_strike_plane.ipynb  New.ipynb  airport_coordinates.db  main.py  pyproject.toml
