[project]
name = "portfolieoprojekte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=0.3.9",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
